# MCP-Runtime

./: .gitignore  CMakeLists.txt  README  p2p_latency_trace.csv  start_env.sh
apps/: business_types.h  node_mcp.cpp  node_normal.cpp  node_sink.cpp  node_source.cpp
components/allocator/: shm_allocator.cpp  shm_allocator.h  test_allocator.cpp
components/common/: shm_layout.h  shm_types.h
components/framework/: softbus_node.h
components/mcp/: MCPEngine.cpp  MCPEngine.hpp  MCPResourceNode.cpp  MCPResourceNode.hpp  ToolRegistry.cpp  ToolRegistry.hpp
components/mpsc_queue/: lockfree_mpsc.h  test_mpsc.cpp
services/logger/: main.cpp
services/registry/: main.cpp
